--- a/NavShieldTracer/NavShieldTracer.csproj
+++ b/NavShieldTracer/NavShieldTracer.csproj
@@ -14,6 +14,7 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Diagnostics.Tracing.TraceEvent" Version="3.1.6" />
 		<PackageReference Include="System.Diagnostics.EventLog" Version="9.0.0-preview.5.24306.7" />
+		<PackageReference Include="Microsoft.Data.Sqlite" Version="8.0.7" />
 	</ItemGroup>
 
 </Project>
