- Adicionar seção de Estado Atual do Projeto (implementado vs planejado) - Documentar fluxo manual de catalogação de testes (processo controlado) - Incluir roadmap faseado detalhado:   • Fase 1: Catalogação Robusta (atual)   • Fase 2: Motor Heurístico Básico (próxima)   • Fase 3: API REST e Dashboard (futuro) - Expandir documentação da estrutura SQLite (3 tabelas + relacionamentos) - Adicionar TTPs prioritários para catalogação com critérios de validação - Incluir seção de Troubleshooting com problemas comuns e soluções - Adicionar referências (Sysmon Event IDs, comandos SQLite úteis)

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,24 @@ _site/
 # Pastas desnecessárias  
 packages/
 TestResults/
+
+# Arquivos de documentação (exceto README.md)
+*.md
+!README.md
+!CLAUDE.md
+
+# Arquivos LaTeX
+*.tex
+*.aux
+*.pdf
+
+# Scripts locais
+*.ps1
+*.bat
+test-build.py
+
+# Análises e documentação local
+analise_*.md
+planejamento_*.md
+DIAGNOSTICO_*.md
+APRESENTACAO_*.*
