--- a/TesteSoftware/TesteSoftware.csproj
+++ b/TesteSoftware/TesteSoftware.csproj
@@ -11,4 +11,9 @@
     <AssemblyName>teste</AssemblyName>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.PowerShell.SDK" Version="7.4.5" />
+    <PackageReference Include="System.Text.Json" Version="9.0.0" />
+  </ItemGroup>
+
 </Project>
