--- a/NavShieldTracer/NavShieldTracer.csproj
+++ b/NavShieldTracer/NavShieldTracer.csproj
@@ -15,6 +15,7 @@
 		<PackageReference Include="Microsoft.Diagnostics.Tracing.TraceEvent" Version="3.1.6" />
 		<PackageReference Include="System.Diagnostics.EventLog" Version="9.0.0-preview.5.24306.7" />
 		<PackageReference Include="Microsoft.Data.Sqlite" Version="8.0.7" />
+		<PackageReference Include="System.ServiceProcess.ServiceController" Version="6.0.0" />
 	</ItemGroup>
 
 </Project>
