Adiciona motor heurístico para análise de ameaças
Implementa o motor heurístico para análise contínua de ameaças:
- Criação das classes `BackgroundThreatMonitor`, `SessionThreatClassifier` e `SimilarityEngine` para monitoramento, classificação e cálculo de similaridade.
- Adição de modelos em `EngineModels.cs` para representar dados de análise, como `SimilarityMatch` e `ThreatAlert`.
- Alterações em `SqliteEventStore.cs` com novos índices, tabelas e métodos para suporte ao motor heurístico.
- Adição de arquivos ao `.gitignore` para evitar rastreamento de arquivos auxiliares.
- Remoção do script `executar_teste.bat` e da configuração `sysmon-config-completa.xml`.

Essas mudanças introduzem um sistema robusto para detecção e classificação de ameaças em tempo real, com otimizações de desempenho e suporte a eventos catalogados.

Reestruturação e melhorias no motor heurístico

- Adicionados novos arquivos ao `.gitignore` para evitar rastreamento.
- Alterados namespaces em diversos arquivos para melhor organização.
- Adicionada a classe `BackgroundThreatMonitor` para análise contínua.
- Criados novos modelos em `EngineModels.cs` para análise de similaridade.
- Adicionadas classes `SessionThreatClassifier` e `SimilarityEngine`.
- Removida a classe `MonitorLogger` e o script `executar_teste.bat`.
- Removido o arquivo de configuração `sysmon-config-completa.xml`.
- Adicionados índices e tabelas ao banco de dados para suporte ao motor heurístico.
- Implementados métodos no `SqliteEventStore` para salvar snapshots e alertas.
- Ajustados `usings` e namespaces em arquivos principais.

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,13 @@ analise_*.md
 planejamento_*.md
 DIAGNOSTICO_*.md
 APRESENTACAO_*.*
+/analise_duplicatas.sql
+/executar_teste.bat
+/nul
+/qodana.sarif.json
+/qodana.yaml
+/ReadDb.cs
+/sysmon-config-completa.xml
+/sysmon-config-completa.xml.backup
+/DbReader
+/docs
