--- a/NavShieldTracer/NavShieldTracer.csproj
+++ b/NavShieldTracer/NavShieldTracer.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -6,16 +6,24 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>$(NoWarn);1701;1702</NoWarn>
+    <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
     <PlatformTarget>x64</PlatformTarget>
     <IsPackable>false</IsPackable>
     <SelfContained>true</SelfContained>
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
-	<ItemGroup>
-		<PackageReference Include="Microsoft.Diagnostics.Tracing.TraceEvent" Version="3.1.6" />
-		<PackageReference Include="System.Diagnostics.EventLog" Version="9.0.0-preview.5.24306.7" />
-		<PackageReference Include="Microsoft.Data.Sqlite" Version="8.0.7" />
-		<PackageReference Include="System.ServiceProcess.ServiceController" Version="6.0.0" />
-	</ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Diagnostics.Tracing.TraceEvent" Version="3.1.6" />
+    <PackageReference Include="Spectre.Console" Version="0.52.0" />
+    <PackageReference Include="System.Diagnostics.EventLog" Version="9.0.0-preview.5.24306.7" />
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="8.0.7" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+    <PackageReference Include="System.ServiceProcess.ServiceController" Version="6.0.0" />
+    <PackageReference Include="RazorConsole.Core" Version="0.0.5" />
+  </ItemGroup>
 
 </Project>
+
+
