Adiciona testes de desempenho e melhorias na interface
- Adicionados testes de desempenho e estresse para avaliar
  escalabilidade e performance do armazenamento SQLite.
- Criados utilitários como DatabaseSeeder e MetricsCollector
  para suporte aos testes.
- Atualizada a interface de console com seleção de processos
  em tempo real e suporte a modos de entrada.
- Refatorado o namespace de armazenamento para maior modularidade.
- Atualizado o README com instruções detalhadas para execução
  e interpretação de testes.
- Introduzido suporte a relatórios ASCII para análise de resultados.
- Adicionados testes de integridade e casos negativos para o
  SqliteEventStore.
- Melhorada a lógica de correspondência e monitoramento de processos.
- Atualizada a solução para incluir o projeto de testes e
  expor internamente classes relevantes.

--- a/NavShieldTracer/NavShieldTracer.csproj
+++ b/NavShieldTracer/NavShieldTracer.csproj
@@ -24,6 +24,11 @@
     <PackageReference Include="RazorConsole.Core" Version="0.0.5" />
   </ItemGroup>
 
-</Project>
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+      <_Parameter1>NavShieldTracer.Tests</_Parameter1>
+    </AssemblyAttribute>
+  </ItemGroup>
 
+</Project>
 
