Melhorias na documentação e ajustes no layout
- Adicionadas regras ao `.gitignore` para arquivos de documentação.
- Criados `api-index.md` e `api-reference.md` para referência da API.
- Adicionado `getting-started.md` com guia inicial de configuração.
- Atualizado `index.md` com novas seções e links para documentos.
- Adicionado `resources.md` para centralizar materiais de apoio.
- Atualizado `readme.md` para incluir o conteúdo principal do repositório.
- Modificado `toc.yml` para refletir a nova estrutura de navegação.
- Ajustado `main.css` para melhorar layout e legibilidade.

--- a/.gitignore
+++ b/.gitignore
@@ -29,16 +29,19 @@ CLAUDE.md
 *.temp
 *~
 
-# DocFX (se adicionado no futuro)
-_site/
 
 # Pastas desnecessárias  
 packages/
 TestResults/
 
-# Arquivos de documentação (exceto README.md)
+# Arquivos de documentacao
 *.md
 !README.md
+!docs/**
+
+# DocFX
+docs/_site/
+docs/api/
 
 # Arquivos LaTeX
 *.tex
@@ -64,7 +67,7 @@ APRESENTACAO_*.*
 /sysmon-config-completa.xml
 /sysmon-config-completa.xml.backup
 /DbReader
-/docs
 /NavShieldTracer/ConsoleApp/UI/ConsoleUI.cs.backup
 *.qea
 .idea/
+
